src_old/objects/BirstSetting__c.object
<CustomObject>
    <description>Setting for Birst Reports</description>
    <fields>
        <fullName>CollectionName__c</fullName>
        <label>Collection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DashBoardName__c</fullName>
        <label>DashBoardName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetName__c</fullName>
        <label>PermissionSetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpaceID__c</fullName>
        <label>SpaceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BirstSetting</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BirstSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>